fix(scroll): foxed scroll on mobiles and tablets

--- a/src/pages/dashboard/myTicketsPage/myTicketsPage.module.scss
+++ b/src/pages/dashboard/myTicketsPage/myTicketsPage.module.scss
@@ -24,3 +24,9 @@
   flex-direction: column;
   gap: $space-8;
 }
+
+.message {
+  display: flex;
+  width: 100%;
+  height: 500px;
+}
